--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,9 @@
           <li id="navigation-logout" class="nav-item">
             <a class="nav-link" onclick="logout()">Logout</a>
           </li>
+          <li id="navigation-new-recipe" class="nav-item">
+            <a class="nav-link" onclick="openNewRecipePage()">Add Recipe</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -56,15 +59,86 @@
 
     <div class="row" id="page-container">
 
+      <!--Add Recipe Form-->
+      <div id="new-recipe-form-page">
+          <form id="new-recipe-form" onsubmit="return false;">
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="dish-name">Dish Name</label>
+                  <input type="text" class="form-control" id="dish-name" placeholder="Dish Name" name="dishName">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="main-ingredient">Main Ingredient</label>
+                  <input type="text" class="form-control" id="main-ingredient" placeholder="Main Ingredient" name="mainIngredient">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="country">Country</label>
+                  <input type="text" class="form-control" id="country" placeholder="Country" name="country">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-4">
+                  <label for="type-of-dish">Type</label>
+                  <select class="form-control" id="type-of-dish" name="dishType">
+                    <option selected>DINNER</option>
+                    <option>SUPPER</option>
+                    <option>BREAKFAST</option>
+                    <option>SNACK</option>  
+                    <option>SALAD</option>
+                    <option>SOUP</option>
+                    <option>DESERT</option>
+                    <option>PRESERVES</option>
+                    <option>VEGE</option>
+                    <option>LIGHT</option>
+                  </select>
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="skill-level">Skill Level</label>
+                  <input type="number" class="form-control" id="skill-level" name="level">
+                </div>
+                <div class="form-group col-md-4">
+                  <label for="preparation-time">Time</label>
+                  <input type="number" class="form-control" id="preparation-time" name="preparationTime">
+                </div>
+              </div>
+              <div class="form-row">
+                  <div class="form-group col-md-4">
+                      <label for="ingredients">Ingredients</label>
+                      <textarea class="form-control" id="ingredients" placeholder="- measure unit ingredient" name="ingredients"></textarea>
+                  </div>
+                  <div class="form-group col-md-4">
+                      <label for="preparation">Preparation</label>
+                      <textarea class="form-control" id="preparation" name="preparation"></textarea>
+                  </div>
+                  <div class="form-group col-md-4">
+                    <label for="additional">Additional Info</label>
+                    <textarea class="form-control" id="additional" "additionalInfo" name="additionalInfo"></textarea>
+                  </div>
+              </div>
+              <div class="form-row">
+                  <div class="form-group col-md-6">
+                      <label for="photo">Photo</label>
+                      <input type="file" class="form-control" id="photo" name="photo">
+                  </div>
+                  <div class="form-group col-md-6">
+                      <label for="video">Video Link</label>
+                      <input type="text" class="form-control" id="video" name="video">
+                  </div>
+              </div>
+              <button type="submit" class="btn btn-primary" onclick="addRecipe()">Add</button>
+            </form>
+      </div>
+      <!--/.Add Recipe Form-->
+
       <!--Login Form-->
       <div id="login-form-page">
           <div class="wrapper">
               <div class="formContent">
                 <!-- Tabs Titles -->
                 <form id="login-form"  onsubmit="return false;">
-                  <input type="text"  class="second" name="login" placeholder="login">
-                  <input type="password"  class="third" name="password" placeholder="password">
-                  <button class="btn btn-primary" onclick="loginIntoApp()">Log In</button>
+                  <input type="text"  class="form-control authorization-input" name="login" placeholder="login">
+                  <input type="password"  class="form-control authorization-input" name="password" placeholder="password">
+                  <button class="btn btn-primary authorization-button" onclick="loginIntoApp()">Log In</button>
                 </form>        
               </div>
           </div>
@@ -77,9 +151,9 @@
               <div class="formContent">
                 <!-- Tabs Titles -->
                 <form id="register-form" onsubmit="return false;">
-                  <input type="text"  class="second" name="login" placeholder="login">
-                  <input type="password"  class="third" name="password" placeholder="password">
-                  <button class="btn btn-primary" onclick="register()">Register</button>
+                  <input type="text"  class="form-control authorization-input" name="login" placeholder="login">
+                  <input type="password"  class="form-control authorization-input" name="password" placeholder="password">
+                  <button class="btn btn-primary authorization-button" onclick="register()">Register</button>
                 </form>        
               </div>
           </div>
@@ -90,54 +164,15 @@
       <div id="recipes-list-page">
 
         <!-- Blog Entries Column -->
-      <div class="col-md-8">
+      <div class="col-md-8"> 
 
           <h1 class="my-4">Page Heading
             <small>Secondary Text</small>
           </h1>
-  
+
           <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
-  
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
-  
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
-  
+          <div id="recipe-posts"></div>
+   
           <!-- Pagination -->
           <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
@@ -235,7 +270,8 @@
   <script src="js/culinary-blog.js"></script>
   <script src="js/login-page.js"></script>
   <script src="js/register.js"></script>
-  
+  <script src="js/new-recipe-page.js"></script>
+  <script src="vendor/unzip/zip.js"></script> 
 
 </body>
 
